--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding/ContainsDuplicate.py=utf-8
+encoding/CourseSchedule.py=utf-8
 encoding/FizzBuzz.py=utf-8
 encoding/LRUCache_v1.py=utf-8
 encoding/LRUCache_v2.py=utf-8
