--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,9 +2,13 @@ eclipse.preferences.version=1
 encoding/ContainsDuplicate.py=utf-8
 encoding/CourseSchedule.py=utf-8
 encoding/FizzBuzz.py=utf-8
+encoding/GroupAnagrams.py=utf-8
 encoding/LRUCache_v1.py=utf-8
 encoding/LRUCache_v2.py=utf-8
 encoding/RandomizedCollection.py=utf-8
+encoding/ReconstructItinerary.py=utf-8
+encoding/ReverseBits.py=utf-8
+encoding/Search_for_a_Range.py=utf-8
 encoding/Twitter.py=utf-8
 encoding/canWinNim.py=utf-8
 encoding/combinationSum.py=utf-8
