--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding/BinaryTreeMaximumPathSum_v1.py=utf-8
 encoding/ContainsDuplicate.py=utf-8
 encoding/CourseSchedule.py=utf-8
 encoding/FizzBuzz.py=utf-8
@@ -10,6 +11,7 @@ encoding/ReconstructItinerary.py=utf-8
 encoding/ReverseBits.py=utf-8
 encoding/Search_for_a_Range.py=utf-8
 encoding/Twitter.py=utf-8
+encoding/Word_Search_II.py=utf-8
 encoding/canWinNim.py=utf-8
 encoding/combinationSum.py=utf-8
 encoding/combinationSum3_v1.py=utf-8
