--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,7 +10,10 @@ encoding/RandomizedCollection.py=utf-8
 encoding/ReconstructItinerary.py=utf-8
 encoding/ReverseBits.py=utf-8
 encoding/Search_for_a_Range.py=utf-8
+encoding/Subsets.py=utf-8
 encoding/Twitter.py=utf-8
+encoding/WordDictionary.py=utf-8
+encoding/WordDictionary_v2.py=utf-8
 encoding/Word_Search_II.py=utf-8
 encoding/canWinNim.py=utf-8
 encoding/combinationSum.py=utf-8
