--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,8 @@ encoding/ContainsDuplicate.py=utf-8
 encoding/CourseSchedule.py=utf-8
 encoding/FizzBuzz.py=utf-8
 encoding/GroupAnagrams.py=utf-8
+encoding/H-Index-\u2161.py=utf-8
+encoding/H-Index.py=utf-8
 encoding/LRUCache_v1.py=utf-8
 encoding/LRUCache_v2.py=utf-8
 encoding/RandomizedCollection.py=utf-8
