--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding/BinaryTreeMaximumPathSum_v1.py=utf-8
 encoding/ContainsDuplicate.py=utf-8
+encoding/CountofSmallerNumbersAfterSelf.py=utf-8
 encoding/CourseSchedule.py=utf-8
 encoding/FizzBuzz.py=utf-8
 encoding/GroupAnagrams.py=utf-8
